# python.sec-ops.aws-assets-tagging

./: LICENSE  README.md  aws_asset_tagger.py  configuration.toml  requirements.txt  setup.cfg
.github/workflows/: unit-test-env.yml
_100_py_scripts/: bash.sh
_aws_asset_tagger/: Dia.puml  config.py  main.py
_aws_asset_tagger/aws_clients/: __init__.py  cloudwatch_client.py
_aws_asset_tagger/resources/: fetcher.py  processor.py
_aws_asset_tagger/utils/: alert.py  logger.py  user_info.py
_files_files_/: .coveragerc  CODEOFCONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  RELEASE.md  SECURITY.md  config.ini  hexagonal_architecture_pattern.puml  pip.conf  pyproject.toml  setup.cfg  setup.py
_languages/: Planning.md  Technical_Documentation.md  Technical_Requirements.md  Technical_Specification.md
_languages/go/: script.go  unit_tests.go
_languages/python/: unit_tests.py
_languages/rust/: script.rs  unit_tests.rs
_languages/typescript/: unit_tests.ts
diagram/: Component_Diagram.puml
docs/: Planning.md  Technical_Documentation.md  Technical_Requirements.md  Technical_Specification.md
languages/: README.md
languages/python/: script.py
languages/typescript/: script.ts
prompts/: 2.prompt
