[metadata]
name = aws_asset_tagger
version = attr: aws_asset_tagger.__version__
description = The Aws assets tagging script for meeting SOC-2 requirements.
long_description_content_type = text/x-rst
url = https://aws-asset-tagger-framework.org
author = Serhii Hladyr
author_email = serhii.hladyr.ukr@gmail.com
license = MIT
license_files = LICENSE

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
tests_require =
    testtools
    requests
    pyyaml
    pytest
    pytest-runner

[options.packages.find]
exclude =
    examples
    tests

[aliases]
test=pytest
